# wicked_dragon_fw

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
app/: CMakeLists.txt  sample.yaml
boards/espressif/my_esp32_devkitc_wroom/: Kconfig  Kconfig.my_esp32_devkitc_wroom  board.yml  my_esp32_devkitc_wroom-pinctrl.dtsi  my_esp32_devkitc_wroom_appcpu.yaml  my_esp32_devkitc_wroom_procpu.dts  my_esp32_devkitc_wroom_procpu.yaml  my_esp32_devkitc_wroom_procpu_defconfig
include/app/drivers/: blink.h
src/: main.c  message_hmi_main.c  message_hmi_main.h  servo_control.c  uart_cmd.c
src/hmi/: uart_cmd.c  uart_cmd.h
src/servo/: servo_control.c  servo_control.h
